--- a/User/css/main.css
+++ b/User/css/main.css
@@ -55,10 +55,10 @@ body {
     color: #666;
 }
 
-.add {
+main div.card button.add {
     display: block;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 25px;
     padding: 8px 12px;
     background-color: #007bff;
     color: #fff;
@@ -68,7 +68,7 @@ body {
     transition: background-color 0.3s ease;
 }
 
-.add:hover {
+main div.card button.add:hover {
     background-color: #0056b3;
 }
 
